# cf-councilconflicts-ca-powersearch

./: .gitignore  README.md  env_template.txt  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
scripts/: compare_beneficiaries.py
src/political_conflict_analysis/: __init__.py  __main__.py  analyzers.py  matchers.py  normalizers.py  processors.py  report_generator.py  types.py  validators.py
tests/: __init__.py  test_data_processor.py  test_fuzzy_matcher.py
